update API
